fix: center-align attr text

--- a/src/index.css
+++ b/src/index.css
@@ -176,4 +176,5 @@ tr .text-regular {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
